force-app/main/default/objects/MSN_JobNotes__c/MSN_JobNotes__c.object-meta.xml
<CustomObject>
    <description>Used to capture Job Notes from the mobile field crew that need to be sent back into EAM.</description>
    <label>Job Note</label>
    <nameField>
        <displayFormat>JBN-{00000}</displayFormat>
        <label>Job Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>