force-app/main/default/objects/MSN_JobNotes__c/fields/Actual_water_off__c.field-meta.xml
<CustomField>
    <fullName>Actual_water_off__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-263</description>
    <label>Actual water off</label>
    <type>DateTime</type>
</CustomField>