force-app/main/default/objects/MSN_JobNotes__c/fields/Address_for_the_impacted_DialysisPatient__c.field-meta.xml
<CustomField>
    <fullName>Address_for_the_impacted_DialysisPatient__c</fullName>
    <label>Address for the impacted DialysisPatient</label>
    <type>TextArea</type>
</CustomField>