force-app/main/default/objects/MSN_JobNotes__c/fields/Address_for_the_impacted_Key_Customer__c.field-meta.xml
<CustomField>
    <fullName>Address_for_the_impacted_Key_Customer__c</fullName>
    <label>Address for the impacted Key Customer</label>
    <type>TextArea</type>
</CustomField>