force-app/main/default/objects/MSN_JobNotes__c/fields/Concatenate_Job_Note__c.field-meta.xml
<CustomField>
    <fullName>Concatenate_Job_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <description>determine if a job note will be concatenated on the work order</description>
    <label>Concatenate Job Note</label>
    <type>Checkbox</type>
</CustomField>