force-app/main/default/objects/MSN_JobNotes__c/fields/Contact_number_for_dialysis_patient__c.field-meta.xml
<CustomField>
    <fullName>Contact_number_for_dialysis_patient__c</fullName>
    <formula>MSN_Work_Order__r.Contact_number_for_dialysis_patient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact number for dialysis patient</label>
    <type>Text</type>
</CustomField>