force-app/main/default/objects/MSN_JobNotes__c/fields/Contact_number_for_key_customer__c.field-meta.xml
<CustomField>
    <fullName>Contact_number_for_key_customer__c</fullName>
    <formula>MSN_Work_Order__r.Contact_number_for_key_customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact number for key customer</label>
    <type>Text</type>
</CustomField>