force-app/main/default/objects/MSN_JobNotes__c/fields/Dialysis_Patient__c.field-meta.xml
<CustomField>
    <fullName>Dialysis_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dialysis Patient</label>
    <type>Checkbox</type>
</CustomField>