force-app/main/default/objects/MSN_JobNotes__c/fields/Dialysis_Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Dialysis_Patient_Name__c</fullName>
    <label>Dialysis Patient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>