force-app/main/default/objects/MSN_JobNotes__c/fields/Estimated_Water_On_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Water_On_Time__c</fullName>
    <label>Estimated Water On Time</label>
    <type>DateTime</type>
</CustomField>