force-app/main/default/objects/MSN_JobNotes__c/fields/Has_the_customer_been_notified__c.field-meta.xml
<CustomField>
    <fullName>Has_the_customer_been_notified__c</fullName>
    <label>Has the customer been notified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>