force-app/main/default/objects/MSN_JobNotes__c/fields/Has_the_Service_Been_Restored__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Service_Been_Restored__c</fullName>
    <label>Has the Service Been Restored</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>