force-app/main/default/objects/MSN_JobNotes__c/fields/Impact_Assessment_Done1__c.field-meta.xml
<CustomField>
    <fullName>Impact_Assessment_Done1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impact_Assessment_Done1</label>
    <type>Checkbox</type>
</CustomField>