force-app/main/default/objects/MSN_JobNotes__c/fields/Impact_Assessment_Done__c.field-meta.xml
<CustomField>
    <fullName>Impact_Assessment_Done__c</fullName>
    <formula>MSN_Work_Order__r.Impact_Assessment_Done__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impact Assessment Done</label>
    <type>Checkbox</type>
</CustomField>