force-app/main/default/objects/MSN_JobNotes__c/fields/Integrate_to_EAM__c.field-meta.xml
<CustomField>
    <fullName>Integrate_to_EAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the job note will get sent to EAM</description>
    <label>Integrate to EAM</label>
    <type>Checkbox</type>
</CustomField>