force-app/main/default/objects/MSN_JobNotes__c/fields/MSN_Created_By_User_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_Created_By_User_Name__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By User Name</label>
    <type>Text</type>
</CustomField>