force-app/main/default/objects/MSN_JobNotes__c/fields/MSN_EAM_Work_Order_No__c.field-meta.xml
<CustomField>
    <fullName>MSN_EAM_Work_Order_No__c</fullName>
    <description>populate EAM work order number from either work order or work order line item for the job note payload</description>
    <formula>IF( ISBLANK(Work_Order_Line_Item__c), MSN_Work_Order__r.Work_Order_No__c ,  Work_Order_Line_Item__r.MSN_EAM_Work_Order_No__c )</formula>
    <label>EAM Work Order Number</label>
    <type>Text</type>
</CustomField>