force-app/main/default/objects/MSN_JobNotes__c/fields/MSN_JobNote_Details__c.field-meta.xml
<CustomField>
    <fullName>MSN_JobNote_Details__c</fullName>
    <description>Stores the actual Job Note eg entered by the field crew from the mobile app.</description>
    <label>Note Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>