force-app/main/default/objects/MSN_JobNotes__c/fields/MSN_JobNote_Type__c.field-meta.xml
<CustomField>
    <fullName>MSN_JobNote_Type__c</fullName>
    <description>Determines the type of the Job Note eg a user entered &quot;Note&quot; or a system generated &quot;Field Update&quot;.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Note</fullName>
                <default>true</default>
                <label>Note</label>
            </value>
            <value>
                <fullName>Water On/Off</fullName>
            </value>
            <value>
                <fullName>Service Restore</fullName>
            </value>
            <value>
                <fullName>Dry Weather Overflow</fullName>
            </value>
            <value>
                <fullName>Impact Assessment for Water Off</fullName>
            </value>
            <value>
                <fullName>Service Request Update Type</fullName>
            </value>
            <value>
                <fullName>Field Update</fullName>
                <isActive>false</isActive>
                <label>Field Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>