force-app/main/default/objects/MSN_JobNotes__c/fields/MSN_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>MSN_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Service Appointment this Job note might be related to in addition to its parent Work Order.</description>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Job Notes</relationshipLabel>
    <relationshipName>Job_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>