force-app/main/default/objects/MSN_JobNotes__c/fields/MSN_ServiceAppointmentNumber__c.field-meta.xml
<CustomField>
    <fullName>MSN_ServiceAppointmentNumber__c</fullName>
    <formula>MSN_Service_Appointment__r.AppointmentNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSN_ServiceAppointmentNumber</label>
    <type>Text</type>
</CustomField>