force-app/main/default/objects/MSN_JobNotes__c/fields/MSN_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>MSN_Work_Order__c</fullName>
    <description>Links a Job Note to its parent Work Order with a master-detail relationship. A Work Order is always required.</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Job Notes</relationshipLabel>
    <relationshipName>Job_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>