force-app/main/default/objects/MSN_JobNotes__c/fields/Scheduled_DateTime_for_Water_Turn_On__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_DateTime_for_Water_Turn_On__c</fullName>
    <description>Date and time when the water is turned on. The first screen which appears when the field engineer selects the water on option. This should take the default current date and time of the system and they can adjust the datetime too.</description>
    <label>Scheduled DateTime for Water Turn On</label>
    <type>DateTime</type>
</CustomField>