force-app/main/default/objects/MSN_JobNotes__c/fields/Service_Request_Update_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Update_Code__c</fullName>
    <label>Service Request Update Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>