force-app/main/default/objects/MSN_JobNotes__c/fields/Service_Restored_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Restored_Date_and_Time__c</fullName>
    <label>Service Restored Date and Time</label>
    <type>DateTime</type>
</CustomField>