force-app/main/default/objects/MSN_JobNotes__c/fields/Water_Status__c.field-meta.xml
<CustomField>
    <fullName>Water_Status__c</fullName>
    <formula>TEXT(MSN_Work_Order__r.Water_On_Off_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Water Status</label>
    <type>Text</type>
</CustomField>