force-app/main/default/objects/MSN_JobNotes__c/fields/When_was_the_customer_notified__c.field-meta.xml
<CustomField>
    <fullName>When_was_the_customer_notified__c</fullName>
    <label>When was the customer notified?</label>
    <type>DateTime</type>
</CustomField>