force-app/main/default/objects/MSN_JobNotes__c/fields/Which_streets_are_impacted__c.field-meta.xml
<CustomField>
    <fullName>Which_streets_are_impacted__c</fullName>
    <label>Which streets are impacted?</label>
    <type>TextArea</type>
</CustomField>