force-app/main/default/objects/MSN_JobNotes__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Job Notes (Work Order)</relationshipLabel>
    <relationshipName>Job_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>