force-app/main/default/objects/MSN_JobNotes__c/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup used to (optionally) relate the Job Note to a Work Order Line Item in addition to its parent Work Order.</description>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Job Notes</relationshipLabel>
    <relationshipName>Job_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>