force-app/main/default/objects/MSN_JobNotes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>MSN_Work_Order__c</columns>
    <columns>MSN_Service_Appointment__c</columns>
    <columns>MSN_JobNote_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>